# SecreTUM

./: .gitignore  .pre-commit-config.yaml  CapacitanceMeasurement.py  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
controller/: Dockerfile  pyproject.toml  requirements.txt
controller/app/: __main__.py  api.py  controller.py  fastapi_backend.py  gpio.py  gpiod_backend.py  main.py  models.py  repository.py  settings.py  utils.py
grafana/datasources/: datasources.yml
grafana/provisioning/: provider.yml
grafana/provisioning/dashboards/: secretum.json
grafana/provisioning/datasources/: datasources.yml
prometheus/: prometheus.yml
pspython/: pspydata.py  pspymethods.py
sensor/: pyproject.toml
sensor/pspython/: PalmSens.Core.Windows.xml  PalmSens.Core.xml  __init__.py  pspydata.py  pspyfiles.py  pspyinstruments.py  pspymethods.py
sensor/sensor/: __main__.py
traefik/: dynamic.yml  traefik.yml
