[tool.poetry]
name = "secretum"
version = "0.1.0"
description = ""
authors = ["Valentin Safronov <svdouble@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.7"
fastapi = "^0.111.0"
gunicorn = "^22.0.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
rich = "^13.7.1"
gpiozero = "^2.0.1"
lgpio = "^0.2.2.0"
scipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pre-commit = "^3.7.1"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C", "N", "B"]
# Disallow all relative imports.
lint.flake8-tidy-imports.ban-relative-imports = "all"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
