[tool.poetry]
name = "secretum-sense"
version = "0.1.0"
description = ""
authors = ["Valentin Safronov <svdouble@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
pythonnet = "^3.0.3"
redis = "^5.0.8"
numpy = "^2.1.0"
scipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C", "N", "B"]
# Disallow all relative imports.
lint.flake8-tidy-imports.ban-relative-imports = "all"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

